# Datathon_CircleLens

config/: settings.py
myproject/: pyproject.toml  requirements.txt
myproject/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
myproject/catboost_info/learn/: events.out.tfevents
myproject/circlelens/: apps.py  club_introduce_DB.csv  club_tag.csv  clubname.csv  contents.csv  data.csv  matching.csv  ratings.csv  urls.py  views.py
myproject/circlelens/static/assets/css/: main.css
myproject/circlelens/templates/circlelens/: index.html  keyword.html  keyword_result.html  reward.html  reward_result.html  search.html  search_result.html  survey.html  survey_result.html
myproject/myproject/: settings.py  urls.py
