[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["chaehyeon"]

[tool.poetry.dependencies]
python = "3.8"
Django = "^3.2.8"
scipy = "^1.7.1"
pandas = "^1.3.3"
catboost = "^1.0.0"
sklearn = "^0.0"
surprise = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
